Fix flex view on phone again and add flex wrap to signup

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body, html {
     font-weight: 900;
     font-size: 20px;
     margin-bottom: 20px;
+    margin-right: 40px;
 }
 .link-container{
     display: flex;
@@ -49,10 +50,11 @@ body, html {
 }
 
 .maincat{
-    height: 218px;
-    width: 380px;
+    height: auto;
+    width: 100%;
+    max-width: 380px;
     border-radius: 5px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .hero-text-container {
@@ -76,8 +78,9 @@ body, html {
     font-weight: 600;
     border: none;
     margin-top: 15px;
-    padding: 5px 20px;
+    padding: 8px 25px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .more-information-title{
@@ -99,7 +102,7 @@ body, html {
 }
 .quote {
     text-align:center;
-    font-size: 30px;
+    font-size: 26px;
     color: #1f2937b3;
     font-style: italic;
     font-weight: 100;
@@ -115,11 +118,14 @@ body, html {
     font-weight: bold;
     font-size: 18px;
 }
+
 .cats-container{
     display:flex;
     justify-content: center;
     flex-wrap:wrap;
     gap: 60px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .image-container{
@@ -153,6 +159,7 @@ body, html {
     margin-left: 60px;
     margin-right: 60px;
     max-width: 800px;
+    flex-wrap: wrap;
 }
 
 .signup-title {
@@ -165,6 +172,7 @@ body, html {
     color:#E5E7EB;
     font-size:14px;
     font-weight: light;
+    margin-right: 30px;
 }
 
 .signup-button {
@@ -176,9 +184,9 @@ body, html {
     border-radius: 5px;
     color:#E5E7EB;
     font-weight: bold;
-    margin-left: 30px;
     flex-shrink: 0;
     align-self: center;
+    margin-top: 10px;
 }
 
 .footer {
